# server_merger

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  tests.yml
assets/: result.json
deployment/: deploy-docker.sh  deploy.sh  df-merger-server.service  docker-compose.yml  encoder-server.service  nginx-df-merger-server.conf  nginx-encoder-server.conf
docs/: ERROR_MESSAGES.md  SERVICE.md  api.md
example/: demo.ipynb
src/: main.py
src/components/: __init__.py  enums.py  geometry_adapter.py  geometry_ops.py  graphics_constants.py  polygon_rasterizer.py  room_polygon.py  window.py
src/components/aggregation/: __init__.py  room_df_aggregator.py
src/components/processing/: __init__.py  context.py  pipeline.py  window_aggregation_orchestrator.py  window_processor.py
src/core/: __init__.py  enums.py  exceptions.py  graphics_constants.py  settings.py
src/models/: __init__.py  aggregation_response.py  image_scale.py  overlap_region.py  processed_window.py  room_df_matrix.py  simulation_data.py
src/server/: application.py  decorators.py  launcher.py  openapi.py  schemas.py
tests/: README.md  conftest.py
tests/components/: test_geometry_adapter.py  test_geometry_ops.py  test_polygon_rasterizer.py  test_window.py
tests/core/: test_enums.py  test_exceptions.py
tests/models/: test_aggregation_response.py  test_image_scale.py  test_overlap_region.py  test_room_df_matrix.py  test_simulation_data.py
tests/server/: __init__.py  test_decorators.py  test_launcher.py
(+67 files in other folders)
